src/test/ui/issues/issue-39559.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-39559.rs:14:18
   |
LL |     entries: [T; D::dim()],
   |                  ^^^^^^ cannot perform const operation using `D`
   |
   = note: type parameters may not be used in const expressions
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error: aborting due to previous error

